# E2E-EKS-GitOps

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.es.md  README.md  VALIDATION_REPORT.md  backlog.md  critical.md  implementation.md
gitops/: .gitignore  IMPLEMENTATION_STATUS.md  POETRY_GUIDE.md  README.md  SETUP.md  TASK_1_SUMMARY.md  pyproject.toml
gitops/applications/: README.md
gitops/applications/apps/argo-workflows/base/: configmap.yaml  controller-deployment.yaml  crds.yaml  kustomization.yaml  (+4 more)
gitops/applications/apps/chaos/: README.md
gitops/applications/apps/gpu-operator/: README.md
gitops/applications/environments/dev/: kserve-application.yaml  kubeflow-application.yaml  kustomization.yaml  mlflow-application.yaml  monitoring-application.yaml
gitops/applications/environments/production/: kserve-application.yaml  kubeflow-application.yaml  kustomization.yaml  mlflow-application.yaml  monitoring-application.yaml
gitops/applications/environments/staging/: kserve-application-staging.yaml  kserve-application.yaml  kubeflow-application-staging.yaml  kubeflow-application.yaml  kustomization.yaml  mlflow-application-staging.yaml  mlflow-application.yaml  monitoring-application-staging.yaml  monitoring-application.yaml
gitops/applications/projects/: mlops-applicationset.yaml  mlops-core.yaml  mlops-helm-repository.yaml
gitops/charts/: README.md  index.yaml
gitops/charts/kserve/: Chart.yaml  values.yaml
gitops/charts/kserve/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
gitops/charts/kubeflow-pipelines/: Chart.yaml  values.yaml
gitops/charts/kubeflow-pipelines/templates/: _helpers.tpl  api-server-deployment.yaml  frontend-deployment.yaml  serviceaccount.yaml  services.yaml
gitops/charts/mlflow/: Chart.yaml  values.yaml
gitops/charts/mlflow/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  rbac.yaml  service.yaml
gitops/charts/monitoring-stack/: Chart.yaml  values.yaml
gitops/charts/monitoring-stack/templates/: _helpers.tpl  drift-cronjob.yaml  evidently-deployment.yaml  prometheus-rules.yaml  serviceaccount.yaml
gitops/infrastructure/: README.md
gitops/infrastructure/addons/: kustomization.yaml
gitops/infrastructure/addons/aws-load-balancer-controller/: helm-release.yaml  helm-repository.yaml  kustomization.yaml
gitops/infrastructure/addons/cluster-autoscaler/: helm-release.yaml  helm-repository.yaml  kustomization.yaml
gitops/infrastructure/addons/ebs-csi-driver/: helm-release.yaml  helm-repository.yaml  kustomization.yaml
gitops/infrastructure/base/: README.md
gitops/infrastructure/clusters/dev/: kustomization.yaml
gitops/infrastructure/clusters/production/: kustomization.yaml
gitops/infrastructure/clusters/staging/: kustomization.yaml
gitops/infrastructure/controllers/argocd/: argocd-repo-server-patch.yaml  argocd-server-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac-config.yaml
gitops/infrastructure/controllers/flux-system/: helm-controller.yaml  kustomization.yaml  kustomize-controller.yaml  namespace.yaml  notification-controller.yaml  rbac.yaml  source-controller.yaml
gitops/infrastructure/environments/dev/: kustomization.yaml
gitops/infrastructure/environments/production/: kustomization.yaml
gitops/infrastructure/environments/staging/: kustomization.yaml
gitops/infrastructure/flux-config/: infrastructure-kustomization.yaml  kustomization.yaml
gitops/infrastructure/networking/: kustomization.yaml
gitops/infrastructure/networking/ingress/: alb-ingress-class.yaml  ingress-class.yaml  kustomization.yaml
gitops/infrastructure/networking/istio/: helm-repository.yaml  istio-base.yaml  istiod.yaml  kustomization.yaml  namespace.yaml
gitops/infrastructure/networking/network-policies/: default-deny-ingress.yaml  kubeflow-allow-internal.yaml  kustomization.yaml  mlflow-allow-internal.yaml  monitoring-allow-scraping.yaml
gitops/infrastructure/security/: kustomization.yaml  rbac-policies.yaml
gitops/infrastructure/security/irsa/: kustomization.yaml  service-accounts.yaml
gitops/infrastructure/security/pod-security/: kustomization.yaml  namespaces-pss.yaml
gitops/infrastructure/sources/: git-repository.yaml  helm-repository.yaml  kustomization.yaml
gitops/scripts/: install-gitops-controllers.sh  package-helm-charts.sh
gitops/scripts/promotion/: notifications.py  promote.py
gitops/scripts/validation/: validate-gitops.sh
gitops/tests/: README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup_test_env.sh  test_application_deployment_consistency.py  test_gitops_checkpoint.py  test_gitops_controller_health.py  test_infrastructure_reconciliation.py  test_mlflow_argocd_deployment.py  test_promotion_pipeline.py  test_repository_structure.py
ml-platform/: Dockerfile.monitoring  pyproject.toml  requirements-dev.txt  requirements.txt
ml-platform/feature_repo/: feature_definitions.py  feature_store.yaml
ml-platform/feature_repo/data/: model_features.parquet  online_store.db  registry.db  transaction_stats.parquet  user_profile.parquet
ml-platform/src/: __init__.py  cli.py  main.py
ml-platform/src/data/: __init__.py  data_loader.py  data_validator.py  feature_engineering.py
ml-platform/src/features/: __init__.py  feature_store_client.py
ml-platform/src/models/: __init__.py  base_model.py  classification_model.py  regression_model.py
ml-platform/src/monitoring/: __init__.py  drift_detector.py  metrics_exporter.py  model_monitor.py  monitoring_service.py  run_drift_check.py
ml-platform/src/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
ml-platform/src/tests/: test_data.py  test_models.py
ml-platform/src/utils/: __init__.py  config_manager.py  logging_config.py  monitoring.py
ml-platform/tests/: __init__.py  conftest.py  test_cli.py  test_data.py  test_data_validator.py  test_feature_store.py  test_integration.py  test_main.py  test_models.py  test_monitoring.py  test_pipelines.py  test_utils.py
(+252 files in other folders)
