[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-platform"
version = "0.1.0"
description = "End-to-end MLOps platform for training, inference, and monitoring"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Jose Julian Mosquera", email = "jose@example.com"}
]
keywords = ["mlops", "machine-learning", "kubernetes", "aws", "eks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",

    "mlflow>=2.18",
    "dvc>=3.12",
    "great-expectations>=0.17",

    "evidently>=0.4",
    "prometheus-client>=0.13,<0.17",

    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",

    "boto3>=1.28",
    "awscli>=1.29",

    "kubernetes>=27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
    "black==23.7.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.5.1",
]

[project.scripts]
mlops-train = "src.cli:main"

[project.urls]
Homepage = "https://github.com/JoseJulianMosqueraFuli/E2E-EKS-GitOps"
Repository = "https://github.com/JoseJulianMosqueraFuli/E2E-EKS-GitOps"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["mlops_platform"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "feast (==0.40.1)"
]
